<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Name"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border"
                android:ems="10"
                android:hint="Enter Your Name"
                android:inputType="text"
                android:paddingStart="20dp"
                android:textColor="#5c5f72"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Email"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border"
                android:ems="10"
                android:hint="Enter Your Email"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:textColor="#5c5f72"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Password"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border"
                android:ems="10"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:textColor="#5c5f72"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Mobile No."
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/border"
                android:ems="10"
                android:hint="Enter Mobile No."
                android:inputType="text"
                android:paddingStart="20dp"
                android:textColor="#5c5f72"
                android:textSize="16sp" />

        </LinearLayout>


        <TextView
            android:id="@+id/login1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="@string/already_have_an_account_login"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/skip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="Skip"
            android:visibility="gone"
            android:textSize="15sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/button123"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#b172ef"
        android:text="@string/sign_up"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:layout_marginBottom="80dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>